crates/forge-codegen/tests/snapshots/snapshot__jobs_and_workflows.snap
---
source: crates/forge-codegen/tests/snapshot.rs
expression: "run_fixture(include_str!(\"fixtures/jobs_and_workflows.rs.txt\"), false)"
---

=== ts/api.ts ===
// @generated by FORGE - DO NOT EDIT

import { getForgeClient, createJobStore, createWorkflowStore } from "@forge-rs/svelte";
import type {
  ExportRequest,
  ExportResult,
  VerifyInput,
  VerifyOutput,
} from "./types";

// Jobs
export const trackExportUsers = (args: { request: ExportRequest }) =>
  createJobStore<{ request: ExportRequest }, ExportResult>("export_users", args);

// Workflows
export const trackVerifyAccount = (args: VerifyInput) =>
  createWorkflowStore<VerifyInput, VerifyOutput>("verify_account", args);

=== ts/index.ts ===
// @generated by FORGE - DO NOT EDIT
export * from './types';
export * from './api';
export * from './stores';
export * from './runes.svelte';
export { ForgeClient, ForgeClientError, createForgeClient, ForgeProvider } from '@forge-rs/svelte';

=== ts/runes.svelte.ts ===
// @generated by FORGE - DO NOT EDIT
import type { SubscriptionStore, ForgeError } from "@forge-rs/svelte";
import type { SubscriptionResult } from "@forge-rs/svelte";
import { ForgeClientError } from "@forge-rs/svelte";

export interface ReactiveQuery<T> extends SubscriptionResult<T> {
  unsubscribe: () => void;
}

export function toReactive<T>(store: SubscriptionStore<T>): ReactiveQuery<T> {
  const state: ReactiveQuery<T> = $state({
    loading: true,
    data: null,
    error: null,
    stale: false,
    unsubscribe: () => {},
  });

  $effect(() => {
    const unsubCallback = store.subscribe((s) => {
      state.loading = s.loading;
      state.data = s.data;
      state.error = s.error;
      state.stale = s.stale;
    });

    const cleanup = () => {
      unsubCallback();
      store.unsubscribe();
    };

    state.unsubscribe = cleanup;
    return cleanup;
  });

  return state;
}

export interface ReactiveMutation<TArgs, TResult> {
  mutate: (args: TArgs) => Promise<TResult>;
  pending: boolean;
  error: ForgeError | null;
}

export function toReactiveMutation<TArgs, TResult>(
  fn: (args: TArgs) => Promise<TResult>,
): ReactiveMutation<TArgs, TResult> {
  const state: ReactiveMutation<TArgs, TResult> = $state({
    mutate: async (args: TArgs) => {
      state.pending = true;
      state.error = null;
      try {
        return await fn(args);
      } catch (e) {
        const err =
          e instanceof ForgeClientError
            ? e
            : new ForgeClientError("UNKNOWN", String(e));
        state.error = err;
        throw e;
      } finally {
        state.pending = false;
      }
    },
    pending: false,
    error: null,
  });
  return state;
}

=== ts/stores.ts ===
// @generated by FORGE - DO NOT EDIT
export {
  getForgeClient,
  createConnectionStore,
  createQueryStore,
  createSubscriptionStore,
  createJobStore,
  createWorkflowStore,
} from '@forge-rs/svelte';
export type {
  Readable,
  ConnectionStatusStore,
  QueryStore,
  SubscriptionStore,
  JobStore,
  WorkflowStore,
} from '@forge-rs/svelte';

=== ts/types.ts ===
// @generated by FORGE - DO NOT EDIT

export interface ExportRequest {
  format: string;
  include_archived: boolean;
}

export interface ExportResult {
  url: string;
  row_count: number;
}

export interface VerifyInput {
  user_id: string;
  email: string;
}

export interface VerifyOutput {
  verified: boolean;
}

export type Cursor = string;

export interface PageInfo {
  has_next_page: boolean;
  end_cursor?: Cursor;
  total_count?: number;
}

export interface Page<T> {
  items: T[];
  page_info: PageInfo;
}

export type { ForgeError, QueryResult, SubscriptionResult } from "@forge-rs/svelte";

=== dioxus/api.rs ===
// @generated by FORGE - DO NOT EDIT

#![allow(dead_code, unused_imports, clippy::redundant_field_names, clippy::too_many_arguments, clippy::wrong_self_convention)]

use forge_dioxus::{
    ForgeClient, ForgeClientError, Mutation, QueryState,
    SubscriptionState, JobExecutionState, TokenPair, WorkflowExecutionState,
};

use super::types::*;
use super::{
    use_forge_query, use_forge_subscription,
    use_forge_mutation, use_forge_job, use_forge_workflow,
};

#[derive(Debug, Clone, PartialEq, serde::Serialize)]
pub struct ExportUsersParams {
    pub request: ExportRequest,
}
impl ExportUsersParams {
    pub fn new(request: ExportRequest) -> Self {
        Self {
            request,
        }
    }
}

pub fn use_export_users(args: ExportUsersParams) -> JobExecutionState<ExportResult> {
    use_forge_job("export_users", args)
}
pub fn use_verify_account(args: VerifyInput) -> WorkflowExecutionState<VerifyOutput> {
    use_forge_workflow("verify_account", args)
}

=== dioxus/mod.rs ===
// @generated by FORGE - DO NOT EDIT

#![allow(dead_code, unused_imports)]

pub mod api;
pub mod types;

pub use api::*;
pub use forge_dioxus::{
    ConnectionState, ForgeAuth, ForgeAuthProvider, ForgeClient, ForgeClientConfig,
    ForgeClientError, ForgeError, ForgeProvider, ForgeUpload, JobExecutionState, Mutation,
    QueryState, SignalError, SubscriptionHandle, SubscriptionState, TokenPair, WorkflowExecutionState,
    use_auth_key, use_connection_state, use_forge_auth, use_forge_client, use_forge_job,
    use_forge_mutation, use_forge_query, use_forge_subscription, use_forge_workflow,
    use_viewer,
};
pub use types::*;

=== dioxus/types.rs ===
// @generated by FORGE - DO NOT EDIT

#![allow(dead_code, unused_imports, clippy::too_many_arguments)]

use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
pub struct ExportRequest {
    pub format: String,
    pub include_archived: bool,
}

impl ExportRequest {
    pub fn new(format: impl Into<String>, include_archived: bool) -> Self {
        Self {
            format: format.into(),
            include_archived,
        }
    }
}

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
pub struct ExportResult {
    pub url: String,
    pub row_count: i64,
}

impl ExportResult {
    pub fn new(url: impl Into<String>, row_count: i64) -> Self {
        Self {
            url: url.into(),
            row_count,
        }
    }
}

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
pub struct VerifyInput {
    pub user_id: String,
    pub email: String,
}

impl VerifyInput {
    pub fn new(user_id: impl Into<String>, email: impl Into<String>) -> Self {
        Self {
            user_id: user_id.into(),
            email: email.into(),
        }
    }
}

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
pub struct VerifyOutput {
    pub verified: bool,
}

impl VerifyOutput {
    pub fn new(verified: bool) -> Self {
        Self {
            verified,
        }
    }
}
