crates/forge-codegen/tests/snapshots/snapshot__models_and_enums.snap
---
source: crates/forge-codegen/tests/snapshot.rs
assertion_line: 25
expression: "run_fixture(include_str!(\"fixtures/models_and_enums.rs.txt\"), false)"
---

=== ts/api.ts ===
// @generated by FORGE - DO NOT EDIT

import { getForgeClient, createSubscriptionStore } from "@forge-rs/svelte";
import type {
  User,
  UserSummary,
} from "./types";

// Queries
export const getUser = (args: { id: string }): Promise<UserSummary | null> =>
  getForgeClient().call("get_user", args);
export const listUsers = (): Promise<User[]> =>
  getForgeClient().call("list_users", null);

// Subscriptions
export const getUserStore$ = (args: { id: string }) =>
  createSubscriptionStore<{ id: string }, UserSummary | null>("get_user", args);
export const listUsersStore$ = () =>
  createSubscriptionStore<null, User[]>("list_users", null);

=== ts/index.ts ===
// @generated by FORGE - DO NOT EDIT
export * from './types';
export * from './api';
export * from './stores';
export * from './runes.svelte';
export * from './reactive.svelte';
export { ForgeClient, ForgeClientError, createForgeClient, ForgeProvider } from '@forge-rs/svelte';

=== ts/reactive.svelte.ts ===
// @generated by FORGE - DO NOT EDIT

import { getUserStore$, listUsersStore$ } from "./api";
import { toReactive, type ReactiveQuery } from "./runes.svelte";
import type { User, UserSummary } from "./types";
export const getUser$ = (args: { id: string }): ReactiveQuery<UserSummary | null> =>
  toReactive(getUserStore$(args));
export const listUsers$ = (): ReactiveQuery<User[]> =>
  toReactive(listUsersStore$());

=== ts/runes.svelte.ts ===
// @generated by FORGE - DO NOT EDIT
import type { SubscriptionStore, ForgeError } from "@forge-rs/svelte";
import type { SubscriptionResult } from "@forge-rs/svelte";
import { ForgeClientError } from "@forge-rs/svelte";

export interface ReactiveQuery<T> extends SubscriptionResult<T> {
  unsubscribe: () => void;
}

export function toReactive<T>(store: SubscriptionStore<T>): ReactiveQuery<T> {
  const state: ReactiveQuery<T> = $state({
    loading: true,
    data: null,
    error: null,
    stale: false,
    unsubscribe: () => {},
  });

  $effect(() => {
    const unsubCallback = store.subscribe((s) => {
      state.loading = s.loading;
      state.data = s.data;
      state.error = s.error;
      state.stale = s.stale;
    });

    const cleanup = () => {
      unsubCallback();
      store.unsubscribe();
    };

    state.unsubscribe = cleanup;
    return cleanup;
  });

  return state;
}

export interface ReactiveMutation<TArgs, TResult> {
  mutate: (args: TArgs) => Promise<TResult>;
  pending: boolean;
  error: ForgeError | null;
}

export function toReactiveMutation<TArgs, TResult>(
  fn: (args: TArgs) => Promise<TResult>,
): ReactiveMutation<TArgs, TResult> {
  const state: ReactiveMutation<TArgs, TResult> = $state({
    mutate: async (args: TArgs) => {
      state.pending = true;
      state.error = null;
      try {
        return await fn(args);
      } catch (e) {
        const err =
          e instanceof ForgeClientError
            ? e
            : new ForgeClientError("UNKNOWN", String(e));
        state.error = err;
        throw e;
      } finally {
        state.pending = false;
      }
    },
    pending: false,
    error: null,
  });
  return state;
}

=== ts/stores.ts ===
// @generated by FORGE - DO NOT EDIT
export {
  getForgeClient,
  createConnectionStore,
  createQueryStore,
  createSubscriptionStore,
  createJobStore,
  createWorkflowStore,
} from '@forge-rs/svelte';
export type {
  Readable,
  ConnectionStatusStore,
  QueryStore,
  SubscriptionStore,
  JobStore,
  WorkflowStore,
} from '@forge-rs/svelte';

=== ts/types.ts ===
// @generated by FORGE - DO NOT EDIT

export interface User {
  id: string;
  email: string;
  display_name?: string;
  role: UserRole;
  created_at: string;
}

export interface UserSummary {
  id: string;
  email: string;
  role: UserRole;
}

export type Cursor = string;

export interface PageInfo {
  has_next_page: boolean;
  end_cursor?: Cursor;
  total_count?: number;
}

export interface Page<T> {
  items: T[];
  page_info: PageInfo;
}

export type UserRole = 'admin' | 'member' | 'guest';

export type { ForgeError, QueryResult, SubscriptionResult } from "@forge-rs/svelte";

=== dioxus/api.rs ===
// @generated by FORGE - DO NOT EDIT

#![allow(dead_code, unused_imports, clippy::redundant_field_names, clippy::too_many_arguments, clippy::wrong_self_convention)]

use forge_dioxus::{
    ForgeClient, ForgeClientError, Mutation, QueryState,
    SubscriptionState, JobExecutionState, TokenPair, WorkflowExecutionState,
};

use super::types::*;
use super::{
    use_forge_query, use_forge_subscription,
    use_forge_mutation, use_forge_job, use_forge_workflow,
};

#[derive(Debug, Clone, PartialEq, serde::Serialize)]
pub struct GetUserParams {
    pub id: String,
}
impl GetUserParams {
    pub fn new(id: impl Into<String>) -> Self {
        Self {
            id: id.into(),
        }
    }
}

pub async fn get_user(client: &ForgeClient, args: GetUserParams) -> Result<Option<UserSummary>, ForgeClientError> {
    client.call("get_user", args).await
}

pub fn use_get_user(args: GetUserParams) -> QueryState<Option<UserSummary>> {
    use_forge_query("get_user", args)
}

pub fn use_get_user_subscription(args: GetUserParams) -> SubscriptionState<Option<UserSummary>> {
    use_forge_subscription("get_user", args)
}
pub async fn list_users(client: &ForgeClient) -> Result<Vec<User>, ForgeClientError> {
    client.call("list_users", ()).await
}

pub fn use_list_users() -> QueryState<Vec<User>> {
    use_forge_query("list_users", ())
}

pub fn use_list_users_subscription() -> SubscriptionState<Vec<User>> {
    use_forge_subscription("list_users", ())
}

=== dioxus/mod.rs ===
// @generated by FORGE - DO NOT EDIT

#![allow(dead_code, unused_imports)]

pub mod api;
pub mod types;

pub use api::*;
pub use forge_dioxus::{
    ConnectionState, ForgeAuth, ForgeAuthProvider, ForgeClient, ForgeClientConfig,
    ForgeClientError, ForgeError, ForgeProvider, ForgeUpload, JobExecutionState, Mutation,
    QueryState, SignalError, SubscriptionHandle, SubscriptionState, TokenPair, WorkflowExecutionState,
    use_auth_key, use_connection_state, use_forge_auth, use_forge_client, use_forge_job,
    use_forge_mutation, use_forge_query, use_forge_subscription, use_forge_workflow,
    use_viewer,
};
pub use types::*;

=== dioxus/types.rs ===
// @generated by FORGE - DO NOT EDIT

#![allow(dead_code, unused_imports, clippy::redundant_field_names, clippy::too_many_arguments)]

use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
pub struct User {
    pub id: String,
    pub email: String,
    pub display_name: Option<String>,
    pub role: UserRole,
    pub created_at: String,
}

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
pub struct UserSummary {
    pub id: String,
    pub email: String,
    pub role: UserRole,
}

impl UserSummary {
    pub fn new(id: impl Into<String>, email: impl Into<String>, role: UserRole) -> Self {
        Self {
            id: id.into(),
            email: email.into(),
            role: role,
        }
    }
}

#[derive(Debug, Clone, PartialEq, Eq, Serialize, Deserialize)]
#[serde(rename_all = "snake_case")]
pub enum UserRole {
    Admin,
    Member,
    Guest,
}
